--- a/variables.css
+++ b/variables.css
@@ -205,7 +205,7 @@ body.dark {
     --modal-bk: #283546;
     
     /* TEXT */
-    --caption-font-color: #9c9c9c;
+    --caption-font-color: #535353;
     --font-color: #c6c6c9;
     --highlight-font-color: #5e6e7e;
     --inverse-font-color: #333;
