--- a/components/pages/base/PageBase/PageBase.module.css
+++ b/components/pages/base/PageBase/PageBase.module.css
@@ -44,7 +44,7 @@
 .overlay > .content > .body,
 .contentWrapper > .content {
     flex: 1 1 auto;
-    padding: 30px 50px;
+    padding: 30px 30px 0 30px;
     min-width: 0;
     max-width: var(--body-width);
 
@@ -156,7 +156,7 @@
         --header-height: 40px;
     }
     .contentWrapper > .content {
-        padding: 10px 20px;
+        padding: 10px 20px 0 20px;
     }
     .overlay > .header > .headerContent {
         justify-content: center;
