--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
