--- a/styles.css
+++ b/styles.css
@@ -426,6 +426,14 @@ h1.article {
   color: #333 !important;
 }
 
+.h1 {
+  font-size: var(--h1-font-size);
+  font-weight: bold;
+}
+.h2 {
+  font-size: var(--h2-font-size);
+}
+
 .wrap {
   text-wrap: wrap;
 }
