--- a/variables.css
+++ b/variables.css
@@ -29,6 +29,11 @@ body {
     --user-sidebar-width: 350px;
     --header-height: 40px;
 
+    /* FONT */
+
+    --h1-font-size: 24px;
+    --h2-font-size: 18px;
+
     /* SHITCODE */
 
     --accent-background-color: #77c0c6;
