--- a/components/pages/base/base.module.css
+++ b/components/pages/base/base.module.css
@@ -11,6 +11,18 @@
     color: var(--accent-color);
 }
 
+.navlink {
+    text-decoration: none;
+    font-weight: bold;
+
+    color: var(--caption-font-color);
+
+    transition: color 0.12s ease-out;
+}
+.navlink:hover {
+    color: var(--accent-color);
+}
+
 @media (max-width: 960px) {
     .h960 {
         display: none !important;
