--- a/components/widgets/user/AuthCard/AuthCard.module.css
+++ b/components/widgets/user/AuthCard/AuthCard.module.css
@@ -1,3 +1,12 @@
 .card {
-    
+    --card-width: 600px;
+    --card-height: 400px;
+
+    background-color: rgba(255, 255, 0, 0.5);
+
+    max-width: var(--card-width);
+    max-height: var(--card-height);
+
+    width: 100%;
+    height: 100%;
 }
