--- a/components/wrappers/Pivot/Pivot.module.css
+++ b/components/wrappers/Pivot/Pivot.module.css
@@ -14,8 +14,14 @@
     border-radius: 5px 5px 0 0;
 
     border-bottom: 1px solid transparent;
+
+    background-color: transparent;
+}
+.key:hover {
+    border-bottom: 1px solid var(--font-color);
 }
 
-.selected {
+.selected,
+.selected:hover {
     border-bottom: 1px solid var(--accent-color);
 }
