--- a/components/pages/base/AutoTableOfContents/AutoTableOfContents.module.css
+++ b/components/pages/base/AutoTableOfContents/AutoTableOfContents.module.css
@@ -1,3 +1,19 @@
 .toc a {
     text-decoration: none;
 }
+
+.totop {
+    transform: rotate(180deg);
+
+    position: absolute;
+
+    bottom: 0;
+    left: 0;
+
+    transition: opacity 0.12s ease-out;
+
+    opacity: 0;
+}
+.totop.visible {
+    opacity: 1;
+}
