new type in exbutton

--- a/components/ui/buttons/ExButton/ExButton.module.css
+++ b/components/ui/buttons/ExButton/ExButton.module.css
@@ -75,3 +75,9 @@
 .button.tip:active {
     background-color: var(--tip-active-color);
 }
+.button.flat {
+    background-color: transparent;
+}
+.button.flat:hover {
+    background-color: var(--highlight-light);
+}
