Fixed avatar object fit

--- a/components/pages/base/base.module.css
+++ b/components/pages/base/base.module.css
@@ -11,6 +11,10 @@
     color: var(--accent-color);
 }
 
+.avatar {
+    object-fit: cover;
+}
+
 .navlink {
     text-decoration: none;
     font-weight: bold;
