--- a/variables.css
+++ b/variables.css
@@ -209,7 +209,7 @@ body.dark {
     --sidebar-user-bk: #151b23;
     
     /* DROPDOWN */
-    --dropdown-bk: #1b232e;
+    --dropdown-bk: var(--body-bk-color);
     
     /* MODAL */
     --modal-bk: var(--body-bk-color);
